Errors and Reviews fixes

--- a/app/views/bookings/_form-booking.html.erb
+++ b/app/views/bookings/_form-booking.html.erb
@@ -59,7 +59,7 @@
         <% end %>
     </fieldset>
 
-    <%= f.submit "Book Now", class: 'submit' %>
+    <button type="submit" name="button" class="submit">book now</button>
 
     <% end %>
 </div>
