--- a/app/assets/stylesheets/base/form.scss
+++ b/app/assets/stylesheets/base/form.scss
@@ -13,14 +13,15 @@
     }
 
     .picker {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      padding: 10px;
-      margin: 2px;
-      div {
-        width: 40%;
-      }
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 10px;
+        margin: 2px;
+
+        div {
+            width: 40%;
+        }
     }
 
     textarea {
@@ -47,6 +48,12 @@
             width: auto;
         }
     }
+}
+
+.error-message {
+    color: $warning-color;
+    font-size: 14px;
+    margin: 0 0 20px;
 }
 
 .content_form.short {
