--- a/app/assets/stylesheets/pages/admin_panel.scss
+++ b/app/assets/stylesheets/pages/admin_panel.scss
@@ -125,6 +125,15 @@ div.well-actions {
     }
   }
 }
+.delete-paragraphs, .edit-paragraphs, .edit-photos, .delete-photos, .add-photo, .file-photo, .back-button {
+  display: block !important;
+  background-color: inherit;
+  border: none;
+  margin: 10px auto 1;
+  color: black;
+  font-size: 18px;
+  cursor: pointer;
+}
 
 #admin-calendar {
 
