--- a/app/views/admin/paragraphs/index.html.erb
+++ b/app/views/admin/paragraphs/index.html.erb
@@ -1,12 +1,19 @@
-<h1>Paragraphs</h1>
-<% @paragraphs.each do |p| %>
-  <h2>Paragraph <%= p.id %></h2>
-  <p><%= p.text %></p>
-  <%= link_to "Edit", edit_admin_page_paragraph_path(@page, p) %> |
-   <%= link_to "Delete paragraph", admin_page_paragraph_path(@page, p), confirm: "Are you sure? Once deleted, all your text is gone!", method: :delete %>
-<% end %>
+<h1>Paragraphs for "<%= @page.name.gsub(/[^0-9A-Za-z]/, '').capitalize %>"</h1>
+<% @paragraphs.each_with_index do |p, index| %>
+  <h2>Paragraph <%= index + 1 %></h2>
+    <%= form_for ['admin', @page, p] do |f| %>
+      <div class="form-group">
+        <%= f.label :text %>
+        <%= f.text_area :text %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Edit", class: "edit-paragraphs" %>
+        <%= button_to "Delete", admin_page_paragraph_path(@page, p), confirm: "Are you sure? Once deleted, all your text is gone!", method: :delete, class: "delete-paragraphs" %>
+      </div>
+    <% end %>
 
-<hr>
+   <hr>
+<% end %>
 
 <h1>Add paragraph</h1>
 <%= form_for ['admin', @page, @paragraph] do |f| %>
@@ -15,6 +22,6 @@
     <%= f.text_area :text %>
   </div>
   <div class="form-group">
-    <%= f.submit "Add", id: "edit-paragraphs" %>
+    <%= f.submit "Add", class: "edit-paragraphs" %>
   </div>
 <% end %>
