--- a/app/views/admin/photos/index.html.erb
+++ b/app/views/admin/photos/index.html.erb
@@ -2,21 +2,21 @@
 
 <% @photos.each do |p| %>
   <%= cl_image_tag(p.image, width: 300, height: 200) %> <br>
-  <%= form_for ['admin', @page, @carousel, @photo] do |f| %>
+  <%= form_for ['admin', @page, p] do |f| %>
     <div class="form-group">
       <%= f.file_field :image, type: :file, multiple: false, class: "file-photo" %>
     </div>
     <div class="form-group">
       <%= f.submit "Edit", class: "edit-photos" %>
-        <%= button_to "Delete", admin_page_carousel_photo_path(@page, @carousel, p), confirm: "Are you sure? Once deleted, all your text is gone!", method: :delete, class: "delete-photos" %>
-    </div>
   <% end %>
+    <%= button_to "Delete", admin_page_photo_path(@page, p), confirm: "Are you sure? Once deleted, all your text is gone!", method: :delete, class: "delete-photos" %>
+    </div>
 
   <hr>
 <% end %>
 
 <h1>Add photo</h1>
-<%= form_for ['admin', @page, @carousel, @photo] do |f| %>
+<%= form_for ['admin', @page, @photo] do |f| %>
   <div class="form-group">
     <%= f.file_field :image, type: :file, multiple: false %>
   </div>
@@ -24,4 +24,3 @@
     <%= f.submit "Add", class: "add-photo" %>
   </div>
 <% end %>
-
