--- a/app/assets/stylesheets/pages/home_page.scss
+++ b/app/assets/stylesheets/pages/home_page.scss
@@ -6,7 +6,7 @@
 
 .home-text-wrapper {
     max-height: 9000px;
-    transition: all 1s ease-in-out;
+    transition: all 500ms ease-in-out;
 }
 
 .home-text-hidden {
