--- a/app/views/bookings/_form-booking.html.erb
+++ b/app/views/bookings/_form-booking.html.erb
@@ -18,6 +18,20 @@
             <% end %>
         </div>
     </div>
+    <div class="people">
+        <div class="input">
+          <%= f.label :people, 'Number of guests' %>
+            <% if params[:guests]%>
+            <%= f.number_field :people, :value => params[:guests], min: 1, max: 15%>
+        <% else %>
+            <%= f.number_field :people, min: 1, max: 15 %>
+            <% end %>
+        </div>
+        <div class="buttons">
+          <a href="#" class="remove_people">  <%= image_tag 'minus.svg', class: 'people_button', alt: 'minus' %></a>
+          <a href="#" class="add_people">  <%= image_tag 'plus.svg', class: 'people_button', alt: 'plus' %></a>
+        </div>
+    </div>
     <fieldset>
         <%= f.label :title %>
         <%= f.text_field :title %>
@@ -38,7 +52,7 @@
         <%= f.label :street_name %>
         <%= f.text_field :street_name %>
 
-        <%= f.label :street_number %>
+        <%= f.label :street_number, 'House Number' %>
         <%= f.text_field :street_number %>
 
         <%= f.label :city %>
@@ -48,20 +62,7 @@
         <%= f.text_field :zip_code %>
     </fieldset>
 
-    <div class="people">
-        <div class="input">
-          <%= f.label :people %>
-            <% if params[:guests]%>
-            <%= f.number_field :people, :value => params[:guests], min: 1, max: 15%>
-        <% else %>
-            <%= f.number_field :people, min: 1, max: 15 %>
-            <% end %>
-        </div>
-        <div class="buttons">
-          <a href="#" class="remove_people">  <%= image_tag 'minus.svg', class: 'people_button', alt: 'minus' %></a>
-          <a href="#" class="add_people">  <%= image_tag 'plus.svg', class: 'people_button', alt: 'plus' %></a>
-        </div>
-    </div>
+
     <button type="submit" name="button" class="submit">book now</button>
 
     <% end %>
