--- a/app/views/bookings/_price.html.erb
+++ b/app/views/bookings/_price.html.erb
@@ -1,4 +1,9 @@
-<h2>Price for the current booking</h2>
+<div class="content text-align">
+    <h3>Price for the current booking</h3>
 
-<p>Booking from <%= params[:checkin] %> to <%= params[:checkout] %>.</p>
-<p id="total_price"></p>
+    <p>Booking from
+        <%= params[:checkin] %>
+        to
+        <%= params[:checkout] %>.</p>
+    <p id="total_price"></p>
+</div>
