Added headings to homepage, sorted carousel by id

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="carousel-container">
     <div class="carousel">
-        <% @carousel.photos.each do |photo| %>
+        <% @carousel.photos.order(:id).each do |photo| %>
         <figure>
             <%= image_tag(photo.image_url(:standard)) %>
         </figure>
@@ -13,6 +13,7 @@
         <div class="home-text-wrapper home-text-hidden" id="home-text-wrapper">
             <% @paragraphs.each do |p| %>
             <div>
+                <h3 class="home_heading"><%= p.heading if p.heading != nil %></h3>
                 <p><%= p.text%></p>
             </div>
             <% end %>
