Add prices to main page

--- a/app/assets/stylesheets/pages/home_page.scss
+++ b/app/assets/stylesheets/pages/home_page.scss
@@ -52,3 +52,12 @@
 .reviews-body {
     text-align: center;
 }
+
+.prices-container {
+  display: flex;
+  flex-wrap: wrap;
+  .well {
+    width: 300px;
+    margin: 10px;
+  }
+}
