Add page using admin

--- a/app/assets/stylesheets/pages/admin_panel.scss
+++ b/app/assets/stylesheets/pages/admin_panel.scss
@@ -147,7 +147,7 @@ div.well-actions {
     }
   }
 }
-.delete-paragraphs, .edit-paragraphs, .edit-photos, .delete-photos, .add-photo, .file-photo, .back-button {
+.delete-paragraphs, .edit-paragraphs, .edit-photos, .delete-photos, .add-photo, .file-photo, .back-button, .add-page {
   display: block !important;
   background-color: inherit;
   border: none;
