--- a/app/views/layouts/adminpanel.html.erb
+++ b/app/views/layouts/adminpanel.html.erb
@@ -24,6 +24,7 @@
           <li class="admin_link"><%= link_to "Past Bookings", admin_past_bookings_path %></li>
           <li class="admin_link"><%= link_to "Reviews", admin_reviews_path %></li>
           <li class="admin_link"><%= link_to "Pages", admin_pages_path %></li>
+          <li class="admin_link"><%= link_to "Carousel Photos", admin_photos_path %></li>
         </ul>
       </div>
     </div>
