--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -1,11 +1,18 @@
 <h1>Pages</h1>
 
-<%= link_to "Edit carousel pictures", admin_page_photos_path(@homepage.id) %>
-
 <% @pages.each do |page| %>
   <h2><%= page.name.gsub(/[^0-9A-Za-z]/, '').capitalize %></h2>
-  <% if page.name == "home_page" %>
     <%= link_to "Edit paragraphs", admin_page_paragraphs_path(page.id) %>
-  <% end %>
     <!-- Link to paragraph edit -->
+<% end %>
+
+<h1>Add new page</h1>
+<%= form_for ['admin', @page] do |f| %>
+<div class="form-group">
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+</div>
+  <div class="form-group">
+    <%= f.submit "Add", class: "add-page" %>
+  </div>
 <% end %>
