--- a/app/views/bookings/_price.html.erb
+++ b/app/views/bookings/_price.html.erb
@@ -2,8 +2,8 @@
     <h3>Price for the current booking</h3>
 
     <p>Booking from
-        <%= params[:checkin] %>
+        <span id="datein"> </span>
         to
-        <%= params[:checkout] %>.</p>
+        <span id="dateout"> </span>
     <p id="total_price"></p>
 </div>
