--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -14,7 +14,7 @@
             </div>
             <div class="bookinginput guests">
                 <label for="guests">Guests</label><br>
-                <input type="number" id="guests" name="guests" min="1" max="15"/>
+                <input type="number" id="guests" name="guests" value="1" min="1" max="15"/>
             </div>
             <button class="submit" type="submit">BOOK NOW</button>
         </form>
