--- a/app/assets/stylesheets/pages/bookings.scss
+++ b/app/assets/stylesheets/pages/bookings.scss
@@ -25,3 +25,10 @@
         margin-right: 20px;
     }
 }
+
+.invoice {
+  max-width: 400px;
+  border: 2px solid $base-color;
+  margin: 0 auto;
+  padding: 20px;
+}
