--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,3 +1,6 @@
 <h2 class="text-align headings">booking new</h2>
 <%= render "price" %>
 <%= render "form-booking" %>
+<script>
+      showPrice();
+</script>
