--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,8 +8,9 @@
         <% end %>
         <nav>
             <%= render 'layouts/modal' %>
-            <%= link_to "Gallery", photogallery_pages_path %>
+            <%= link_to "Pricing", prices_pages_path %>
             <%= link_to "Reviews", reviews_path %>
+            <%= link_to "Gallery", photogallery_pages_path %>
         </nav>
     </div>
 </header>
