--- a/app/views/pages/photogallery.html.erb
+++ b/app/views/pages/photogallery.html.erb
@@ -1,3 +1,27 @@
 <div class="content">
     <div id="instagram" class="instagram"></div>
 </div>
+<script>
+    Instagram.popular(function (response) {
+        var instagram = $('#instagram');
+        for (var i = 0; i < response.data.length; i++) {
+            var imageUrl = response.data[i].images.low_resolution.url;
+            instagram.append(imgHelper(imageUrl, response.data[i].images.standard_resolution.url));
+        }
+        gallery();
+    });
+    function gallery() {
+        $('.ig-image').magnificPopup({
+            type: 'image',
+            tLoading: 'Loading image #%curr%...',
+            gallery: {
+                enabled: true,
+                navigateByImgClick: true,
+                preload: [0, 1] // Will preload 0 - before current, and 1 after the current image
+            },
+            image: {
+                tError: '<a href="%url%">The image #%curr%</a> could not be loaded.'
+            }
+        });
+    }
+</script>
