--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,9 @@
 <footer>
-  <div>Duis lacus dui, gravida vel eleifend vitae, venenatis ac.</div>
-  <div>Aliquam gravida lacinia accumsan. Sed varius nec felis in.</div>
-  <div>Sed eu convallis mi, vitae convallis est. Phasellus sed.</div>
+  <div>
+<strong>Cas'al Verde</strong><br>
+Strade di Tregole 79 <br>
+Castellina in Chianti <br>
+53011 Italy<br><br>
++31 6 510 697 87
+</div>
 </footer>
