Delete pages, change hidden state in admin

--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -2,8 +2,22 @@
 
 <% @pages.each do |page| %>
   <h2><%= page.name.gsub(/[^0-9A-Za-z]/, '').capitalize %></h2>
-    <%= link_to "Edit paragraphs", admin_page_paragraphs_path(page.id) %>
-    <!-- Link to paragraph edit -->
+    <% if page.name != "home_page" %>
+      <%= form_for ['admin', page] do |p| %>
+        <div class="form-group">
+          <%= p.label :hidden %>
+          <%= p.check_box :hidden %>
+          <%= p.submit "Save", class: "add-page" %>
+          <%= button_to "Delete", admin_page_path(page), confirm: "Are you sure? Once deleted, all your text is gone!", method: :delete, class: "delete-paragraphs" %>
+        </div>
+        <div class="form-group">
+
+        </div>
+      <% end %>
+    <% end %>
+      <%= button_to "Edit paragraphs", admin_page_paragraphs_path(page.id), class: "add-page" %>
+
+      <hr>
 <% end %>
 
 <h1>Add new page</h1>
