--- a/app/assets/stylesheets/partials/booking_modal.scss
+++ b/app/assets/stylesheets/partials/booking_modal.scss
@@ -39,7 +39,7 @@
     z-index: 99;
     left: -75px;
     display: none;
-    background: url('modalbg.svg');
+    background: url('images/modalbg.svg');
     height: 300px;
     width: 300px;
     font-family: Lato, sans-serif;
