Making page hide when hidden

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,8 +12,9 @@
             <%= link_to "Reviews", reviews_path %>
             <%= link_to "Gallery", photogallery_pages_path %>
             <% Page.all.each do |page|%>
-              <% if page.name != "home_page" %>
-                <%= link_to page.name, page_path(page) %>
+              <% if page.name != "home_page" && page.hidden != true %>
+
+                  <%= link_to page.name, page_path(page) %>
               <% end %>
             <% end %>
         </nav>
